--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css"/>
     <title>1-9演習</title>
@@ -13,7 +14,7 @@
     </header>
 
     <main>
-    <div class="step-box">
+    <div class="step-box1">
       <div class="step-image1"></div>
       <span class="step-number">step1</span>
       <h3 class="title">タイトルが入ります</h3>
@@ -21,7 +22,7 @@
         "文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。"
       </p>
     </div>
-    <div class="step-box">
+    <div class="step-box2">
       <div class="step-image2"></div>
       <span class="step-number">step2</span>
       <h3 class="title">タイトルが入ります</h3>
@@ -29,7 +30,7 @@
         "文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。"
       </p>
     </div>
-    <div class="step-box">
+    <div class="step-box3">
       <div class="step-image3"></div>
       <span class="step-number">step3</span>
       <h3 class="title">タイトルが入ります</h3>
